source/templates/classic/style.css
/* SVG global context */
  svg {
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
    font-size: 14px;
    color: #777777;
  }

/* Large SVG context */
  svg.large .largeable {
    width: 474px;
  }
  svg.large .largeable > .row {
    width: 100%;
  }
  svg.large .largeable-align-start {
    align-items: flex-start;
  }
  svg.large .column.largeable, svg.large .row.largeable, svg.large .largeable-inline-flex {
    display: inline-flex;
  }
  svg.large .largeable-flex-wrap, svg.large .largeable-column-fields {
    display: flex;
    flex-wrap: wrap;
  }
  svg.large .largeable-column-fields > .field {
    width: 230px;
  }
  svg.large .chart.largeable {
    width: 458px;
  }
  svg.large .largeable-width-auto {
    width: auto;
  }
  svg.large .largeable-width-half {
    width: 50%;
  }

/* Columns display */
  svg.columns .items-wrapper{
    column-count: 2;
    column-gap: 10px;
  }
  svg.columns .items-wrapper>*{
    -webkit-column-break-inside: avoid;
    page-break-inside: avoid;
    break-inside: avoid-column;
  }

  @media (max-width: 850px){
    svg.columns .items-wrapper{
      column-count: 1;
    }
  }

/* Headers */
  h1, h2, h3 {
    margin: 8px 0 2px;
    padding: 0;
    color: #0366d6;
    font-weight: normal;
  }
  h1 svg, h2 svg, h3 svg {
    fill: currentColor;
  }
  h1 {
    font-size: 20px;
    font-weight: bold;
  }
  h2 {
    font-size: 16px;
  }
  h3 {
    font-size: 14px;
  }
  .h-details {
    margin: 0 4px;
    padding-top: 4px;
    font-size: 0.8rem;
  }

/* Fields */
  section > .field {
    margin-left: 5px;
    margin-right: 5px;
  }
  .field {
    display: flex;
    align-items: center;
    margin-bottom: 2px;
    white-space: nowrap;
  }
  .field svg {
    margin: 0 8px;
    fill: #959da5;
    flex-shrink: 0;
  }
  .field.error {
    color: #cb2431;
  }
  .field.error svg {
    fill: #cb2431;
  }

/* Displays */
  .row {
    display: flex;
  }
  .row section {
    flex: 1 1 0;
  }
  .column {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .center {
    justify-content: center;
  }
  .horizontal {
    justify-content: space-around;
  }
  .horizontal-wrap {
    flex-wrap: wrap;
  }
  .horizontal .field {
    flex: 1 1 0;
  }
  .no-wrap {
    white-space: nowrap;
  }
  .fill-width {
    width: 100%;
  }
  .margin-bottom {
    margin-bottom: 16px;
  }
  .no-margin-top {
    margin-top: 0px;
  }

/* User avatar */
  .avatar {
    border-radius: 50%;
    margin: 0 6px;
  }

  .organization.avatar {
    border-radius: 15%;
  }

  .organization.name {
    white-space: nowrap;
  }

  .organization.contributions {
    margin: 0 8px;
    flex-wrap: wrap;
  }

  .contribution.organization {
    display: flex;
    border: 1px solid #959da5;
    border-radius: 6px;
    padding: 2px 6px;
    padding-left: 0;
    margin: 2px;
    font-size: 12px;
    background-color: #959da520;
  }

  .contribution.organization .avatar {
    margin: 0 4px;
  }

/* Commit calendar */
  .calendar.field {
    margin: 4px 0;
    margin-left: 7px;
  }
  .calendar .day {
    outline: 1px solid rgba(27,31,35,.04);
    outline-offset: -1px;
  }

/* Progress bars */
  svg.bar {
    margin: 4px 0;
  }

/* Language */
  .field.language {
    margin: 0 8px;
    flex-grow: 0;
  }

  .field.language.details {
    display: flex;
    justify-content: space-between;
  }

  .field.language.details small {
    display: flex;
    justify-content: space-between;
    color: #666666;
    text-align: right;
  }

  .field.language.details > *, .field.language.details small > * {
    flex: 1 1 0;
  }
  .field.language.details small > *:not(:last-child) {
    margin-right: 6px;
  }

/* Follow-up */
  .followup.legend {
    font-size: 12px;
  }
  .followup.legend svg {
    margin: 0 3px;
    width: 14px;
    height: 14px;
  }
  .followup.legend svg:first-child {
    margin-left: 0;
  }
  .followup.legend svg:last-child {
    margin-right: 0;
  }

/* Labels */
  .label {
    background-color: #58A6FF30;
    color: #0366D6;
    padding: 0 10px;
    font-weight: 500;
    line-height: 22px;
    margin: 2px 5px;
    white-space: nowrap;
    border-radius: 32px;
    font-size: 12px;
  }

/* Habits */
  .habits {
    margin: 0;
    list-style-type: none;
    padding-left: 37px;
  }

/* Footer */
  footer {
    margin-top: 8px;
    font-size: 10px;
    font-style: italic;
    color: #666666;
    text-align: right;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    padding: 0 4px;
  }

/* Speed test categories */
  .categories {
    display: flex;
    align-items: center;
    justify-content: space-around;
    margin-top: 4px;
  }
  .category {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: 1 1 0;
  }

/* Gauges */
  .gauge {
    stroke-linecap: round;
    fill: none;
  }
  .gauge.high {
    color: #18b663;
  }
  .gauge.average {
    color: #fb8c00;
  }
  .gauge.low {
    color: #e53935;
  }
  .gauge.info {
    color: #58A6FF;
  }
  .gauge-base, .gauge-arc {
    stroke: currentColor;
    stroke-width: 10;
  }
  .gauge-base {
    stroke-opacity: .2;
  }
  .gauge-arc {
    fill: none;
    stroke-dashoffset: 0;
    animation-delay: 250ms;
    animation: animation-gauge 1s ease forwards
  }
  .gauge text {
    fill: currentColor;
    font-size: 40px;
    font-family: monospace;
    text-anchor: middle;
    font-weight: 600;
  }
  .gauge .title {
    font-size: 18px;
    color: #777777;
  }
  @keyframes animation-gauge {
    from {
      stroke-dasharray: 0 329;
    }
  }
  .audits {
    margin-top: 8px;
  }
  .audit.text {
    min-width: 42px;
  }
  .audit svg {
    margin: 0;
  }
  .audit.high {
    fill: #18b663;
  }
  .audit.average {
    fill: #fb8c00;
  }
  .audit.low {
    fill: #e53935;
  }

  .screenshot {
    width: 452px;
    height: 315px;
    margin: 8px 14px 4px;
    border-radius: 5px;
  }
/* ... */

